<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/sign_up_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/title_padding"
                android:text="@string/sign_up"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/email_label" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginBottom="@dimen/input_box_bottom"
                android:background="@drawable/edit_text_gray"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/password_label" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginBottom="@dimen/input_box_bottom"
                android:background="@drawable/edit_text_gray"
                android:ems="10"
                android:inputType="textPassword" >
            </EditText>

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/name_label" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginBottom="@dimen/input_box_bottom"
                android:background="@drawable/edit_text_gray"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/phone_label" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginBottom="@dimen/input_box_bottom"
                android:background="@drawable/edit_text_gray"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/gender_label" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_box_bottom"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/male" 
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/female" />
            </RadioGroup>

            <TextView
                android:id="@+id/interest_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/interest_label" />

            <LinearLayout
                android:id="@+id/interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_box_bottom"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/clothings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/clothings" />

                    <CheckBox
                        android:id="@+id/cosmetics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/cosmetics" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/books"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/books" />

                    <CheckBox
                        android:id="@+id/home"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/home" />
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/pets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/pet" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/sign_up_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/sign_up"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>