<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <ImageView
                android:id="@+id/product_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/feed_item_padding_top_bottom"
                android:contentDescription="Product Image"
                android:src="@drawable/ic_action_camera" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/product_category_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_category_label" />

                <Spinner
                    android:id="@+id/product_category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_box_bottom"
                    android:prompt="@string/product_category_label" />

                <TextView
                    android:id="@+id/product_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name_label" />

                <EditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_box_bottom"
                    android:background="@drawable/edit_text_gray"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/product_status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_status_label" />

                <Spinner
                    android:id="@+id/product_status_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/input_box_bottom"
                    android:prompt="@string/product_status_label" />

                <TextView
                    android:id="@+id/product_price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price_label" />

                <EditText
                    android:id="@+id/product_price"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/input_box_bottom"
                    android:background="@drawable/edit_text_gray"
                    android:ems="10"
                    android:inputType="number" >
                </EditText>

                <TextView
                    android:id="@+id/product_method_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_method_label" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/input_box_bottom" >

                    <RadioButton
                        android:id="@+id/method_all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:checked="true"
                        android:text="@string/method_all" />

                    <RadioButton
                        android:id="@+id/method_ptop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/method_ptop" />

                    <RadioButton
                        android:id="@+id/method_post"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/method_post" />
                </RadioGroup>

                <TextView
                    android:id="@+id/product_detail_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/product_detail_label" />

                <EditText
                    android:id="@+id/product_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_box_bottom"
                    android:background="@drawable/edit_text_gray"
                    android:ems="10"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/product_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_box_bottom"
                    android:background="@color/black"
                    android:text="EDIT"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_box_bottom"
                    android:background="@color/black"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>